Fix logo vertical alignment and size glitch

--- a/magda-web-client/src/Components/Header/Header.scss
+++ b/magda-web-client/src/Components/Header/Header.scss
@@ -15,13 +15,13 @@
         overflow: hidden;
         padding: 0;
         margin: 0;
+        line-height: 78px;
 
         .au-header__logo {
             display: inline-block;
-            line-height: 78px;
             vertical-align: middle;
-            max-width: 367px;
-            max-height: 70px;
+            max-width: 100%;
+            max-height: 100%;
         }
     }
 }
